--- a/SQL practice-ETL.ipynb
+++ b/SQL practice-ETL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
      "text": [
       "Dataset URL: https://www.kaggle.com/datasets/rizwanbakht/employeedepartment\n",
       "License(s): unknown\n",
-      "Downloading Empl-Depart.csv to c:\\Users\\wanji\\AppData\\Local\\Programs\\Microsoft VS Code\n",
+      "Downloading Empl-Depart.csv to c:\\Users\\wanji\\Desktop\\Data Project\\Data-Project\n",
       "\n"
      ]
     },
@@ -44,13 +44,530 @@
      "text": [
       "\n",
       "  0%|          | 0.00/4.17k [00:00<?, ?B/s]\n",
-      "100%|██████████| 4.17k/4.17k [00:00<00:00, 1.06MB/s]\n"
+      "100%|██████████| 4.17k/4.17k [00:00<00:00, 2.12MB/s]\n"
      ]
     }
    ],
    "source": [
     "import kaggle \n",
     "!kaggle datasets download rizwanbakht/employeedepartment -f Empl-Depart.csv\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Extract data from the file \n",
+    "# zip_ref = zipfile.ZipFile('Empl-Depatrt.csv')\n",
+    "# zip_ref.extractall()\n",
+    "# zip_ref.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>First Name</th>\n",
+       "      <th>Last Name</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Phone Number</th>\n",
+       "      <th>Hire Date</th>\n",
+       "      <th>Job</th>\n",
+       "      <th>Salary</th>\n",
+       "      <th>Commission Percent</th>\n",
+       "      <th>Manager</th>\n",
+       "      <th>Department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Steven</td>\n",
+       "      <td>King</td>\n",
+       "      <td>SKING</td>\n",
+       "      <td>515.123.4567</td>\n",
+       "      <td>10/10/2009</td>\n",
+       "      <td>President</td>\n",
+       "      <td>24,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ACCOUNTING</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Neena</td>\n",
+       "      <td>Kochhar</td>\n",
+       "      <td>NKOCHHAR</td>\n",
+       "      <td>515.123.4568</td>\n",
+       "      <td>1/15/2012</td>\n",
+       "      <td>Administration Vice President</td>\n",
+       "      <td>17,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Steven</td>\n",
+       "      <td>RESEARCH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lex</td>\n",
+       "      <td>De Haan</td>\n",
+       "      <td>LDEHAAN</td>\n",
+       "      <td>515.123.4569</td>\n",
+       "      <td>5/9/2015</td>\n",
+       "      <td>Administration Vice President</td>\n",
+       "      <td>17,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Steven</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alexander</td>\n",
+       "      <td>Hunold</td>\n",
+       "      <td>AHUNOLD</td>\n",
+       "      <td>590.423.4567</td>\n",
+       "      <td>4/28/2012</td>\n",
+       "      <td>Programmer</td>\n",
+       "      <td>9,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lex</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bruce</td>\n",
+       "      <td>Ernst</td>\n",
+       "      <td>BERNST</td>\n",
+       "      <td>590.423.4568</td>\n",
+       "      <td>9/13/2013</td>\n",
+       "      <td>Programmer</td>\n",
+       "      <td>6,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alexander</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  First Name Last Name     Email  Phone Number   Hire Date  \\\n",
+       "0     Steven      King     SKING  515.123.4567  10/10/2009   \n",
+       "1      Neena   Kochhar  NKOCHHAR  515.123.4568   1/15/2012   \n",
+       "2        Lex   De Haan   LDEHAAN  515.123.4569    5/9/2015   \n",
+       "3  Alexander    Hunold   AHUNOLD  590.423.4567   4/28/2012   \n",
+       "4      Bruce     Ernst    BERNST  590.423.4568   9/13/2013   \n",
+       "\n",
+       "                            Job   Salary  Commission Percent    Manager  \\\n",
+       "0                      President  24,000                 NaN        NaN   \n",
+       "1  Administration Vice President  17,000                 NaN     Steven   \n",
+       "2  Administration Vice President  17,000                 NaN     Steven   \n",
+       "3                     Programmer   9,000                 NaN        Lex   \n",
+       "4                     Programmer   6,000                 NaN  Alexander   \n",
+       "\n",
+       "   Department  \n",
+       "0  ACCOUNTING  \n",
+       "1    RESEARCH  \n",
+       "2       SALES  \n",
+       "3       SALES  \n",
+       "4       SALES  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Read the dataset\n",
+    "employee_data = pd.read_csv('Empl-Depart.csv')\n",
+    "employee_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['First Name', 'Last Name', 'Email', 'Phone Number', 'Hire Date', 'Job ',\n",
+       "       'Salary', 'Commission Percent', 'Manager', 'Department'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee_data.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employee_data.columns = employee_data.columns.str.lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first name</th>\n",
+       "      <th>last name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>phone number</th>\n",
+       "      <th>hire date</th>\n",
+       "      <th>job</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>commission percent</th>\n",
+       "      <th>manager</th>\n",
+       "      <th>department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Steven</td>\n",
+       "      <td>King</td>\n",
+       "      <td>SKING</td>\n",
+       "      <td>515.123.4567</td>\n",
+       "      <td>10/10/2009</td>\n",
+       "      <td>President</td>\n",
+       "      <td>24,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ACCOUNTING</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Neena</td>\n",
+       "      <td>Kochhar</td>\n",
+       "      <td>NKOCHHAR</td>\n",
+       "      <td>515.123.4568</td>\n",
+       "      <td>1/15/2012</td>\n",
+       "      <td>Administration Vice President</td>\n",
+       "      <td>17,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Steven</td>\n",
+       "      <td>RESEARCH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lex</td>\n",
+       "      <td>De Haan</td>\n",
+       "      <td>LDEHAAN</td>\n",
+       "      <td>515.123.4569</td>\n",
+       "      <td>5/9/2015</td>\n",
+       "      <td>Administration Vice President</td>\n",
+       "      <td>17,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Steven</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alexander</td>\n",
+       "      <td>Hunold</td>\n",
+       "      <td>AHUNOLD</td>\n",
+       "      <td>590.423.4567</td>\n",
+       "      <td>4/28/2012</td>\n",
+       "      <td>Programmer</td>\n",
+       "      <td>9,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lex</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bruce</td>\n",
+       "      <td>Ernst</td>\n",
+       "      <td>BERNST</td>\n",
+       "      <td>590.423.4568</td>\n",
+       "      <td>9/13/2013</td>\n",
+       "      <td>Programmer</td>\n",
+       "      <td>6,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alexander</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first name last name     email  phone number   hire date  \\\n",
+       "0     Steven      King     SKING  515.123.4567  10/10/2009   \n",
+       "1      Neena   Kochhar  NKOCHHAR  515.123.4568   1/15/2012   \n",
+       "2        Lex   De Haan   LDEHAAN  515.123.4569    5/9/2015   \n",
+       "3  Alexander    Hunold   AHUNOLD  590.423.4567   4/28/2012   \n",
+       "4      Bruce     Ernst    BERNST  590.423.4568   9/13/2013   \n",
+       "\n",
+       "                            job   salary  commission percent    manager  \\\n",
+       "0                      President  24,000                 NaN        NaN   \n",
+       "1  Administration Vice President  17,000                 NaN     Steven   \n",
+       "2  Administration Vice President  17,000                 NaN     Steven   \n",
+       "3                     Programmer   9,000                 NaN        Lex   \n",
+       "4                     Programmer   6,000                 NaN  Alexander   \n",
+       "\n",
+       "   department  \n",
+       "0  ACCOUNTING  \n",
+       "1    RESEARCH  \n",
+       "2       SALES  \n",
+       "3       SALES  \n",
+       "4       SALES  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "      <th>phone_number</th>\n",
+       "      <th>hire_date</th>\n",
+       "      <th>job_</th>\n",
+       "      <th>salary</th>\n",
+       "      <th>commission_percent</th>\n",
+       "      <th>manager</th>\n",
+       "      <th>department</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Steven</td>\n",
+       "      <td>King</td>\n",
+       "      <td>SKING</td>\n",
+       "      <td>515.123.4567</td>\n",
+       "      <td>10/10/2009</td>\n",
+       "      <td>President</td>\n",
+       "      <td>24,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ACCOUNTING</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Neena</td>\n",
+       "      <td>Kochhar</td>\n",
+       "      <td>NKOCHHAR</td>\n",
+       "      <td>515.123.4568</td>\n",
+       "      <td>1/15/2012</td>\n",
+       "      <td>Administration Vice President</td>\n",
+       "      <td>17,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Steven</td>\n",
+       "      <td>RESEARCH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Lex</td>\n",
+       "      <td>De Haan</td>\n",
+       "      <td>LDEHAAN</td>\n",
+       "      <td>515.123.4569</td>\n",
+       "      <td>5/9/2015</td>\n",
+       "      <td>Administration Vice President</td>\n",
+       "      <td>17,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Steven</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Alexander</td>\n",
+       "      <td>Hunold</td>\n",
+       "      <td>AHUNOLD</td>\n",
+       "      <td>590.423.4567</td>\n",
+       "      <td>4/28/2012</td>\n",
+       "      <td>Programmer</td>\n",
+       "      <td>9,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Lex</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bruce</td>\n",
+       "      <td>Ernst</td>\n",
+       "      <td>BERNST</td>\n",
+       "      <td>590.423.4568</td>\n",
+       "      <td>9/13/2013</td>\n",
+       "      <td>Programmer</td>\n",
+       "      <td>6,000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Alexander</td>\n",
+       "      <td>SALES</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first_name last_name     email  phone_number   hire_date  \\\n",
+       "0     Steven      King     SKING  515.123.4567  10/10/2009   \n",
+       "1      Neena   Kochhar  NKOCHHAR  515.123.4568   1/15/2012   \n",
+       "2        Lex   De Haan   LDEHAAN  515.123.4569    5/9/2015   \n",
+       "3  Alexander    Hunold   AHUNOLD  590.423.4567   4/28/2012   \n",
+       "4      Bruce     Ernst    BERNST  590.423.4568   9/13/2013   \n",
+       "\n",
+       "                            job_  salary  commission_percent    manager  \\\n",
+       "0                      President  24,000                 NaN        NaN   \n",
+       "1  Administration Vice President  17,000                 NaN     Steven   \n",
+       "2  Administration Vice President  17,000                 NaN     Steven   \n",
+       "3                     Programmer   9,000                 NaN        Lex   \n",
+       "4                     Programmer   6,000                 NaN  Alexander   \n",
+       "\n",
+       "   department  \n",
+       "0  ACCOUNTING  \n",
+       "1    RESEARCH  \n",
+       "2       SALES  \n",
+       "3       SALES  \n",
+       "4       SALES  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert columns with spaces to underscore : We use 'str.replace'\n",
+    "employee_data.columns = employee_data.columns.str.replace(' ', '_')\n",
+    "employee_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert the order date to datettim\n",
+    "# employee_data['hire_date'] = pd.to_datetime(employee_data['hire_date'],format=\"%Y-%m-%d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the data to the sql server \n",
+    "import sqlalchemy as sal\n",
+    "\n",
+    "# Define your PostgreSQL details\n",
+    "username = 'postgres'\n",
+    "password = 'Edna90!'\n",
+    "hostname = 'localhost'\n",
+    "port = '5432'\n",
+    "\n",
+    "# Create the SQLAlchemy engine without specifying the database\n",
+    "engine = sal.create_engine(f'postgresql+psycopg2://{username}:{password}@{hostname}:{port}/postgres')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Write the data to the SQL server\n",
+    "employee_data.to_sql('employee_table', con=engine, if_exists='append', index=False)"
    ]
   },
   {
